Header and Footer changed.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,24 +77,15 @@
                 <a class="nav-link" href="{{ site.baseurl }}/about">About</a>
                 </li>
                 
-                <li class="nav-item">
-                <a class="nav-link" href="https://github.com/wowthemesnet/mediumish-theme-jekyll/archive/master.zip"><i class="fas fa-download"></i> Jekyll Version</a>
-                </li>
-                
-                <li class="nav-item">
-                <a target="_blank" class="nav-link" href="https://www.wowthemes.net/themes/mediumish-wordpress/"><i class="fab fa-wordpress-simple"></i> WP Version</a>
-                </li>
-                
-                <li class="nav-item">
-                <a target="_blank" class="nav-link" href="https://www.wowthemes.net/themes/mediumish-ghost/"><i class="fab fa-snapchat-ghost"></i> Ghost Version</a>
-                </li>
-
+               
+                <!--
                 <li class="nav-item">
                 <a target="_blank" class="nav-link" href="https://www.facebook.com/wowthemesnet/"><i class="fab fa-facebook-f"></i></a>
                 </li>
+		-->
                 
                 <li class="nav-item">
-                <a target="_blank"  class="nav-link" href="https://twitter.com/wowthemesnet"><i class="fab fa-twitter"></i></a>
+                <a target="_blank"  class="nav-link" href="https://twitter.com/DEBRUPDATTA"><i class="fab fa-twitter"></i></a>
                 </li>
                 
             </ul>		
@@ -130,6 +121,7 @@
 
 <!-- Bottom Alert Bar
 ================================================== -->
+<!--
 <div class="alertbar">
 	<div class="container text-center">
 		<span><img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{site.title}}"> &nbsp; Never miss a <b>story</b> from us, subscribe to our newsletter</span>
@@ -140,8 +132,9 @@
             </div>
         </form>
 	</div>
-</div>    
-    
+</div>    --> 
+
+
 </div><!-- /.container>
     
 <!-- Categories Jumbotron
@@ -178,9 +171,11 @@
             <div class="col-md-6 col-sm-6 text-center text-lg-left">
                  Copyright © {{ site.time | date: "%Y" }} {{ site.name }} 
             </div>
+	    <!--
             <div class="col-md-6 col-sm-6 text-center text-lg-right">    
                 <a target="_blank" href="https://www.wowthemes.net">Mediumish Theme</a> by WowThemes.net
             </div>
+	    -->
         </div>
     </div>
 </footer>
