--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -589,7 +589,7 @@ License: https://www.wowthemes.net/freebies-license/
          padding:0;
          height:350px;
          border-radius:0;
-         background-image: url(../images/jumbotron.jpg);
+         background-image: url(../images/jumbotron.png);
          background-size:cover;
     }
      .jumbotron.fortags .col-md-4 {
