New post , mathajax added.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -200,5 +200,8 @@
 <script src="{{ site.baseurl }}/assets/js/mediumish.js"></script>
     
 <script id="dsq-count-scr" src="//{{site.disqus}}.disqus.com/count.js"></script>
+<script type="text/javascript" async
+  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML">
+</script>
 </body>
 </html>
