--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,10 @@ post_class: post-template
 		<div class="col-md-2 pl-0">            
            {% include share.html %}  
 		</div>
-		
+        
+		{% if page.use_math %}
+          {% include mathjax_support %}
+        {% endif %}
 
 		<!-- Post -->        
         {% assign author = site.authors[page.author] %}
