RGBD post added .

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -188,7 +188,7 @@
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-    
+
 <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
     
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
@@ -200,6 +200,8 @@
 <script src="{{ site.baseurl }}/assets/js/mediumish.js"></script>
     
 <script id="dsq-count-scr" src="//{{site.disqus}}.disqus.com/count.js"></script>
+
+<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=70&t=n&d=3x0G3Kp3m2n8oThBmw9wWVxPKwaM9bIEJ6j_0bFCyd8&co=ffffff&cmo=ffffff&cmn=ffffff&ct=ffffff"></script>
 
 </body>
 </html>
